# spaceship-alpha

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
assets/shaders/: line.frag  line.vert  ui.frag  ui.vert
src/: app.rs  block.rs  entity.rs  floor.rs  graphics.rs  item.rs  main.rs  renderer.rs
src/entity/: gameplay.rs  input.rs  mod.rs  objects.rs  physics.rs  ship.rs
src/graphics/: line.rs  mod.rs  obj.rs  ui.rs
src/shaders/: basic.frag  basic.vert
src/ui/: button.rs  end_game.rs  in_game.rs  layout.rs  mod.rs  stack.rs  widget_textures.rs  widgets.rs
