[package]
name = "spaceship-alpha"
version = "0.1.0"
authors = ["Noah Charlton <ncharlton002@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = {git = "https://github.com/gfx-rs/wgpu-rs"}
winit = "0.23.0"
cgmath = "0.17.0"
specs = "0.16.1"
futures = "0.3"
bytemuck = "1.2.0"