[package]
name = "spaceship-alpha"
version = "0.1.0"
authors = ["Noah Charlton <ncharlton002@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.7.0"
winit = "0.23.0"
cgmath = "0.17.0"
specs = { version = "0.16.1", features = ["specs-derive"] }
futures = {version = "0.3", default-features = false, features = ["executor"] }
bytemuck = "1.2.0"
generational-arena = "0.2"
lazy_static = "1.4.0"
nalgebra = "0.20"
ncollide3d = "0.22"
image = "0.23.8"
texture_packer = "0.22.0"
rusttype = "0.9.2"